--- a/captial_account.html
+++ b/captial_account.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,
 		maximum-scale=1, user-scalable=no">
 		<meta charset="utf-8" />
+		<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<script src="js/utils.js" type="text/javascript" charset="utf-8"></script>
@@ -49,8 +50,8 @@
 				<img onclick="history.back()" style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
 				<span style="margin-top: 4px;margin-left: -10px;">提现账户</span>
 			</div>
-			
-			<select v-model="bank_id" class="border_input">
+
+				<select v-model="bank_id" class="border_input">
 				<option :value="bank.ID" style="height: 40px;background: #FFFFFF;" v-for="bank in bank_list">{{bank.name}}</option>
 			</select>
 			
@@ -61,24 +62,73 @@
 			<input v-model="bank_card" type="number" placeholder="请输入银行卡号" class="border_input"/>
 		
 			<p @click="submit()" style="width: 94%;margin-left: 3%;height: 40px;background: #23527C;color: #fff;text-align: center;line-height: 40px;margin-top: 40px;border-radius: 4px;">确认</p>
+
+			<!-- <p style="margin-left: 12px;margin-top: 12PX;">微信收款码</p>
+			<img id="id_img1" @click="chooseFile(1)" style="width: 93%;margin-left: 3.5%;margin-top: 4PX;" :src="wechatCode" />
+			<p style="margin-left: 12px;margin-top: 12PX;">支付宝收款码</p>
+			<img id="id_img2" @click="chooseFile(2)" style="width: 93%;margin-left: 3.5%;margin-top: 4PX;" :src="alipayCode" />
+			<form enctype="multipart/form-data" id="uploadForm">
+				<input onchange="showPicture(this)" style="display: none;" accept="image/*" id="id_file" type="file" />
+			</form> -->
 		</div>
 	</body>
 	<script>
 		addEventTest();
+		// var fileUrl = '';
+		// var getType = 0;
+
+		// function showPicture(imgFile) {
+		// 	document.getElementById("id_img" + getType).src = window.URL.createObjectURL(imgFile.files[0]);
+		// 	var formData = new FormData();
+		// 	formData.append('img', imgFile.files[0]);
+		// 	//ajax请求
+		// 	$.ajax({
+		// 		type: "post",
+		// 		url: UPDATA_IMAGE + "?access-token=" + localStorage.getItem('access-token'),
+		// 		data: formData,
+		// 		dataType: 'json',
+		// 		processData: false, // 告诉jQuery不要去处理发送的数据
+		// 		contentType: false, // 告诉jQuery不要去设置Content-Type请求头
+		// 		xhrFields: {
+		// 			withCredentials: true
+		// 		},
+		// 		async: true, //默认是true：异步，false：同步。
+		// 		success: function(data) {
+		// 			fileUrl = data.data.url;
+		// 			switch (getType) {
+		// 				case 1:
+
+		// 					break;
+		// 				case 2:
+
+		// 					break;
+		// 			}
+		// 		},
+		// 		error: function(data) {
+		// 			console.log('请求异常');
+		// 		},
+		// 	});
+		// }
 		var app = new Vue({
-			el:"#id_app",
-			data:{
+			el: "#id_app",
+			data: {
+				// wechatCode: 'img/icon_add_img.png',
+				// alipayCode: 'img/icon_add_img.png',
 				bank_list:[],
 				bank_id:1,
 				branch_name:"",
 				name:"",
 				bank_card:"",
 			},
-			mounted(){
+			mounted() {
 				this.getUserSetting();
 				this.getBankInfo();
 			},
-			methods:{
+			methods: {
+				// chooseFile: function(type) {
+				// 	document.getElementById("id_file").click();
+				// 	getType = type;
+				// }
 				Bank(ID,name){
 					var bank = new Object();
 					bank.ID = ID;
