--- a/main.html
+++ b/main.html
@@ -94,11 +94,11 @@
 
 			<div class="wrap">
 				<div class="cont">
-					<ul class="state">
+					<ul class="state" style="background: #FFFFFF;width: 100%;">
 						<li v-for="(title,index) in titleList">
 							<div @click="clickTab(title.ID,index)">
-								<img :src="title.logo" style="width: 16px;height: 16px;">
-								<span :class="(index == selTab) ? 'selTabText':'noselTabText'" >{{title.name}}</span>
+								<img :src="title.logo" style="width: 20px;height: 20px;">
+								<p :class="(index == selTab) ? 'selTabText':'noselTabText'" style="font-size: 16px;display: inline-block;position: relative;top: 2px;left: 4px;">{{title.name}}</p>
 							</div>
 							
 						</li>
@@ -111,7 +111,7 @@
 			<ul>
 				<li v-for="(data,index) in datas">
 					<div style="height: 90px;background: #fff;border-radius: 8px;margin: 1%;">
-						<img :src="data.img" style="float: left;height: 80px;margin-left: 5px;margin-top: 5px;width: 80px;">
+						<img :src="data.img" style="float: left;height: 60px;margin-left: 10px;margin-top: 15px;width: 60px;">
 						<div style="display: inline-block;margin-left: 4px;">
 							<p style="margin-left: 10px;margin-top: 10px;font-size: 12px;">要求: {{data.task_name}}</p>
 							<p style="margin-left: 10px;margin-top: -4px;font-size: 12px;">需方: {{data.name}}</p>
@@ -152,6 +152,7 @@
 
 	</body>
 	<script>
+		checkVersionUpdata(UPDATA_INDEX);
 		addEventTest();
 		var app = new Vue({
 			el: "#id_app",
