--- a/captial.html
+++ b/captial.html
@@ -76,7 +76,7 @@
 				<span style="margin-top: 4px;margin-left: -10px;">申请提现</span>
 			</div>
 			
-			<div style="padding-left: 12px;padding-top: 12px;background: #FFFFFF;padding-bottom: 12px;margin-top: 12px;">
+			<div v-if="false" style="padding-left: 12px;padding-top: 12px;background: #FFFFFF;padding-bottom: 12px;margin-top: 12px;">
 				<p>{{bankname}}</p>
 				<br />
 				<span style="color: bfbfbf;margin-top: 20px;font-size: 12px;">开户人:{{username}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 尾号:{{endNum}}  </span>
