--- a/forget_password.html
+++ b/forget_password.html
@@ -6,9 +6,11 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+		<script src="js/utils.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/urlAddress.js" type="text/javascript" charset="utf-8"></script>
 		<!-- 生产环境版本，优化了尺寸和速度 -->
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-		<title>注册用户</title>
+		<title>忘记密码</title>
 		<style>
 			ul,
 			li {
@@ -18,50 +20,85 @@
 			}
 			
 			p,
-			span,
-			input {
+			span,input{
 				font-size: 15px;
 				font-weight: 200;
 				padding: 0px;
 				margin: 0px;
 			}
+		
 			
 			body {
 				background: #F7F7F7;
 			}
+			.border_input{
+				outline: none;
+				width: 90%;
+				border: none;
+				border-bottom: #E2E2E2 solid 1px;
+				height: 40px;
+				background: #F7F7F7;
+				padding-left: 24px;
+				display: inline-block;
+			}
+			.border_input_sel{
+				outline: none;
+				width: 90%;
+				border: none;
+				border-bottom: #E2E2E2 solid 1px;
+				height: 40px;
+				background: #F7F7F7;
+				padding-left: 24px;
+				display: inline-block;
+				color: red;
+				font-weight: bold;
+			}
+			
+			/* 可以设置不同的进入和离开动画 */
+			/* 设置持续时间和动画函数 */
+			.slide-fade-enter-active {
+			  transition: all .3s ease;
+			}
+			.slide-fade-leave-active {
+			  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+			}
+			.slide-fade-enter, .slide-fade-leave-to
+			/* .slide-fade-leave-active for below version 2.1.8 */ {
+			  transform: translateX(10px);
+			  opacity: 0;
+			}
 		</style>
 	</head>
-
 	<body>
 		<div id="id_app">
 			<div style="background: #FFFFFF;">
-				<p style="height: 50px;width: 100%;text-align: center;line-height: 50px;">注册</p>
+				<img onclick="history.back()" style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
+				<span style="margin-top: 4px;margin-left: -10px;">忘记密码</span>
 			</div>
+			
 			<input v-model="user_phone" type="number" placeholder="请输入手机号码" style="width: 94%;height: 40px;margin-top: 20px;margin-left: 3%;padding-left: 10px;outline: none;" />
-
+			
 			<div style="height: 40px;margin-top: 10px;margin-left: 3%;width: 94%;background: #FFFFFF;line-height: 40px;">
 				<input v-model="check_code" type="number" placeholder="验证码" style="padding-left: 10px;outline: none;" />
 				<span @click="getVerificationCode()" style="float: right;margin-right: 12px;font-size: 12px;background: #1E83D3;height: 30px;margin-top: 5px;line-height: 30px;color: #FFFFFF;font-weight: 100;padding-left: 12px;padding-right: 12px;border-radius: 4px;">{{codeBtnText}}</span>
 			</div>
-
-			<input v-model="user_name" type="text" placeholder="请输入姓名" style="width: 94%;height: 40px;margin-top: 20px;margin-left: 3%;padding-left: 10px;outline: none;" />
-
+			
 			<input v-model="user_pwd1" type="password" placeholder="请输入登录密码" style="width: 94%;height: 40px;margin-top: 20px;margin-left: 3%;padding-left: 10px;outline: none;" />
-
+			
 			<input v-model="user_pwd2" type="password" placeholder="请再次输入密码" style="width: 94%;height: 40px;margin-top: 10px;margin-left: 3%;padding-left: 10px;outline: none;" />
 			
-
+			
 			<p style="font-size: 10px;margin-left: 3%;margin-top: 40px;color: #FF3159;">*密码需由英文+字母+数字组成,最少6位</p>
-			<p @click="register()" style="width: 94%;margin-left: 3%;height: 40px;background: #23527C;color: #fff;text-align: center;line-height: 40px;border-radius: 4px;margin-top: 10px;">注册</p>
+			<p @click="register()" style="width: 94%;margin-left: 3%;height: 40px;background: #23527C;color: #fff;text-align: center;line-height: 40px;border-radius: 4px;margin-top: 10px;">确定</p>
 		</div>
 	</body>
 	<script>
+		addEventTest();
 		var app = new Vue({
 			el: "#id_app",
 			data: {
 				user_phone: '',
 				check_code: '',
-				user_name: '',
 				user_pwd1: '',
 				user_pwd2: '',
 				codeBtnText:'发送验证码',
@@ -69,25 +106,24 @@
 				isCanGetCode:true
 			},
 			methods: {
-				/**
-				 * 注册用户
-				 */
 				register: function() {
 					var that = this;
+					if(that.user_pwd1 != that.user_pwd2){
+						alert("密码输入不一致")
+						return;
+					}
 					ajax({
 						method: "POST",
-						url: "http://fans.20b.me/v1/member/register",
+						url: "http://fans.20b.me/v1/member/retrieve-reset-password",
 						data: {
 							phone: that.user_phone,//用户手机号/账号
-							username: that.user_name,//用户名字
 							password: that.user_pwd1,//用户密码
-							check_code: that.check_code,//验证码
-							code:GetQueryString("uid"),//邀请码
+							sms_code: that.check_code,//验证码
 						},
 						success: function(obj) {
 							alert(obj.message);
 							if(obj.success){
-								location.href = "http://fans.20b.me/app/download.html";
+								history.back()
 							}
 						}
 					});
@@ -128,59 +164,10 @@
 				}
 			},
 			mounted() {
-
+		
 			},
-
+		
 		})
-		
-		/* 封装ajax函数
-		 * @param {string}opt.type http连接的方式，包括POST和GET两种方式
-		 * @param {string}opt.url 发送请求的url
-		 * @param {boolean}opt.async 是否为异步请求，true为异步的，false为同步的
-		 * @param {object}opt.data 发送的参数，格式为对象类型
-		 * @param {function}opt.success ajax发送并接收成功调用的回调函数
-		 */
-		function ajax(opt) {
-			opt = opt || {};
-			opt.method = opt.method.toUpperCase() || 'POST';
-			opt.url = opt.url || '';
-			opt.async = opt.async || true;
-			opt.data = opt.data || null;
-			opt.success = opt.success || function() {};
-			var xmlHttp = null;
-			if (XMLHttpRequest) {
-				xmlHttp = new XMLHttpRequest();
-			} else {
-				xmlHttp = new ActiveXObject('Microsoft.XMLHTTP');
-			}
-			var params = [];
-			for (var key in opt.data) {
-				params.push(key + '=' + opt.data[key]);
-			}
-			var postData = params.join('&');
-			if (opt.method.toUpperCase() === 'POST') {
-				xmlHttp.open(opt.method, opt.url, opt.async);
-				xmlHttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded;charset=utf-8');
-				// xmlHttp.setRequestHeader('Access-Control-Allow-Origin', '*')
-				xmlHttp.send(postData);
-			} else if (opt.method.toUpperCase() === 'GET') {
-				xmlHttp.open(opt.method, opt.url + '?' + postData, opt.async);
-				console.log(opt.url + '?' + postData)
-				xmlHttp.send(null);
-			}
-		
-			xmlHttp.onreadystatechange = function() {
-				if (xmlHttp.readyState == 4 && xmlHttp.status == 200) {
-					opt.success(JSON.parse(xmlHttp.responseText)); //如果不是json数据可以去掉json转换
-				}
-			};
-		}
-		function GetQueryString(name) {
-			var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
-			var r = decodeURI(decodeURI(location.search)).substr(1).match(reg);
-			if (r != null) return unescape(r[2]);
-			return null;
-		}
 		
 	</script>
 </html>
