--- a/captial.html
+++ b/captial.html
@@ -92,6 +92,7 @@
 			  </transition>
 			
 			<p style="margin-left: 12px;margin-top: 4px;font-size: 12px;">可用余额: {{captial_fee}}</p>
+			<p style="margin-left: 12px;margin-top: 4px;font-size: 12px;color: red;">提现手续费10%  (休息日提现,工作日审核)</p>
 			<p @click="submit()" style="width: 94%;margin-left: 3%;height: 40px;background: #23527C;color: #fff;text-align: center;line-height: 40px;margin-top: 40px;border-radius: 4px;">确认</p>
 		</div>
 	</body>
