--- a/me.html
+++ b/me.html
@@ -132,7 +132,7 @@
 					{name:'提现账户',img:"img/menu_icon_account.png"},
 					{name:'提现记录',img:"img/menu_icon_txjl.png"},
 					{name:'资金明细',img:"img/menu_icon_zjmx.png"},
-					{name:'推广赚钱',img:"img/menu_icon_tgzq.png"},
+					// {name:'推广赚钱',img:"img/menu_icon_tgzq.png"},
 					// {name:'修改密码',img:"img/menu_icon_xgmm.png"},
 					{name:'申请提现',img:"img/icon_menu_sqtx.png"},
 				],
