--- a/login.html
+++ b/login.html
@@ -44,6 +44,7 @@
 			},
 			mounted() {
 				addEventTest();
+				checkVersionUpdata(UPDATA_INDEX);
 				if(localStorage.getItem('access-token') != '' && localStorage.getItem('access-token') != null){
 					var access_token = localStorage.getItem('access-token');
 					location.href = "main.html";
